--- a/mirrorArrangementAlgo.ipynb
+++ b/mirrorArrangementAlgo.ipynb
@@ -64,8 +64,8 @@
     "    return coordinates_dict\n",
     "n = 10\n",
     "roomsize = 10\n",
-    "random_points = generate_random_3dtuple(n,\"Mirror\",normalise = False,upper=10)\n",
-    "random_normals = generate_random_3dtuple(n,\"Normal\",normalise = True,upper=10,lower=-10)\n",
+    "random_points = generate_random_3dtuple(n,\"Mirror\",normalise = False,upper=roomsize)\n",
+    "random_normals = generate_random_3dtuple(n,\"Normal\",normalise = True,upper=roomsize,lower=-roomsize)\n",
     "random_points[\"Mirror_1\"] = (10,10,5) #chosen coordinates for Mirror1 for its greatest sight of all other mirrors\n",
     "random_normals[\"Normal_1\"] = normalise_vector((-1,-1,0))\n",
     "laser_point = (0,0,5)\n",
